--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 	}],
 	"require": {
 		"php": ">= 5.3",
-		"logger/logger": "dev-master"
+		"logger/logger": "~0.0.1@stable"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~3.7"
