--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,4 +6,37 @@ pages:
 - ['index.md', 'Home']
 - ['user-guide/install.md', 'User Guide']
 - ['user-guide/getting-started.md', 'User Guide']
+- ['components/loggers/LoggerCollection.md', 'Components', 'Loggers']
 - ['components/common/ExtendedLogger.md', 'Components', 'Common']
+- ['components/common/ExtendedLogger.md', 'Components', 'Common']
+
+
+- ['loggers/ArrayLogger.md', 'Components', 'Loggers']
+- ['loggers/CallbackLogger.md', 'Components', 'Loggers']
+- ['loggers/ErrorLogLogger.md', 'Components', 'Loggers']
+- ['loggers/LoggerCollection.md', 'Components', 'Loggers']
+- ['loggers/ResourceLogger.md', 'Components', 'Loggers']
+- ['loggers/StreamLogger.md', 'Components', 'Loggers']
+- ['loggers/SyslogLogger.md', 'Components', 'Loggers']
+- ['common/ExtendedLogger.md', 'Components', 'Common']
+- ['common/ExtendedPsrLoggerWrapper.md', 'Components', 'Common']
+- ['formatters/CallbackFormatter.md', 'Components', 'Formatters']
+- ['formatters/ContextJsonFormatter.md', 'Components', 'Formatters']
+- ['formatters/DateTimeFormatter.md', 'Components', 'Formatters']
+- ['formatters/FormatFormatter.md', 'Components', 'Formatters']
+- ['formatters/MaxLengthFormatter.md', 'Components', 'Formatters']
+- ['formatters/MessagePrefixFormatter.md', 'Components', 'Formatters']
+- ['formatters/NobrFormatter.md', 'Components', 'Formatters']
+- ['formatters/PassThroughFormatter.md', 'Components', 'Formatters']
+- ['formatters/ReplaceFormatter.md', 'Components', 'Formatters']
+- ['formatters/TemplateFormatter.md', 'Components', 'Formatters']
+- ['formatters/TrimFormatter.md', 'Components', 'Formatters']
+- ['filters/CallbackFilter.md', 'Components', 'Filters']
+- ['filters/ExcludeLogLevelFilter.md', 'Components', 'Filters']
+- ['filters/LogLevelRangeFilter.md', 'Components', 'Filters']
+- ['filters/MaxLogLevelFilter.md', 'Components', 'Filters']
+- ['filters/MinLogLevelFilter.md', 'Components', 'Filters']
+- ['filters/RegularExpressionFilter.md', 'Components', 'Filters']
+- ['extenders/CallbackExtender.md', 'Components', 'Extenders']
+- ['extenders/ContextExtender.md', 'Components', 'Extenders']
+- ['extenders/StacktraceExtender.md', 'Components', 'Extenders']
