--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,33 +6,33 @@ pages:
 - ['index.md', 'Home']
 - ['user-guide/install.md', 'User Guide']
 - ['user-guide/getting-started.md', 'User Guide']
-- ['components/loggers/LoggerCollection.md', 'Components', 'Loggers']
-- ['components/loggers/ArrayLogger.md', 'Components', 'Loggers']
-- ['components/loggers/CallbackLogger.md', 'Components', 'Loggers']
-- ['components/loggers/ErrorLogLogger.md', 'Components', 'Loggers']
-- ['components/loggers/LoggerCollection.md', 'Components', 'Loggers']
-- ['components/loggers/ResourceLogger.md', 'Components', 'Loggers']
-- ['components/loggers/StreamLogger.md', 'Components', 'Loggers']
-- ['components/loggers/SyslogLogger.md', 'Components', 'Loggers']
-- ['components/common/ExtendedLogger.md', 'Components', 'Common']
-- ['components/common/ExtendedPsrLoggerWrapper.md', 'Components', 'Common']
-- ['components/formatters/CallbackFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/ContextJsonFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/DateTimeFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/FormatFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/MaxLengthFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/MessagePrefixFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/NobrFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/PassThroughFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/ReplaceFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/TemplateFormatter.md', 'Components', 'Formatters']
-- ['components/formatters/TrimFormatter.md', 'Components', 'Formatters']
-- ['components/filters/CallbackFilter.md', 'Components', 'Filters']
-- ['components/filters/ExcludeLogLevelFilter.md', 'Components', 'Filters']
-- ['components/filters/LogLevelRangeFilter.md', 'Components', 'Filters']
-- ['components/filters/MaxLogLevelFilter.md', 'Components', 'Filters']
-- ['components/filters/MinLogLevelFilter.md', 'Components', 'Filters']
-- ['components/filters/RegularExpressionFilter.md', 'Components', 'Filters']
-- ['components/extenders/CallbackExtender.md', 'Components', 'Extenders']
-- ['components/extenders/ContextExtender.md', 'Components', 'Extenders']
-- ['components/extenders/StacktraceExtender.md', 'Components', 'Extenders']
+- ['components/loggers/LoggerCollection.md', 'Loggers', 'LoggerCollection']
+- ['components/loggers/ArrayLogger.md', 'Loggers', 'ArrayLogger']
+- ['components/loggers/CallbackLogger.md', 'Loggers', 'CallbackLogger']
+- ['components/loggers/ErrorLogLogger.md', 'Loggers', 'ErrorLogLogger']
+- ['components/loggers/LoggerCollection.md', 'Loggers', 'LoggerCollection']
+- ['components/loggers/ResourceLogger.md', 'Loggers', 'ResourceLogger']
+- ['components/loggers/StreamLogger.md', 'Loggers', 'StreamLogger']
+- ['components/loggers/SyslogLogger.md', 'Loggers', 'SyslogLogger']
+- ['components/common/ExtendedLogger.md', 'Common', 'ExtendedLogger']
+- ['components/common/ExtendedPsrLoggerWrapper.md', 'Common', 'ExtendedPsrLoggerWrapper']
+- ['components/formatters/CallbackFormatter.md', 'Formatters', 'CallbackFormatter']
+- ['components/formatters/ContextJsonFormatter.md', 'Formatters', 'ContextJsonFormatter']
+- ['components/formatters/DateTimeFormatter.md', 'Formatters', 'DateTimeFormatter']
+- ['components/formatters/FormatFormatter.md', 'Formatters', 'FormatFormatter']
+- ['components/formatters/MaxLengthFormatter.md', 'Formatters', 'MaxLengthFormatter']
+- ['components/formatters/MessagePrefixFormatter.md', 'Formatters', 'MessagePrefixFormatter']
+- ['components/formatters/NobrFormatter.md', 'Formatters', 'NobrFormatter']
+- ['components/formatters/PassThroughFormatter.md', 'Formatters', 'PassThroughFormatter']
+- ['components/formatters/ReplaceFormatter.md', 'Formatters', 'ReplaceFormatter']
+- ['components/formatters/TemplateFormatter.md', 'Formatters', 'TemplateFormatter']
+- ['components/formatters/TrimFormatter.md', 'Formatters', 'TrimFormatter']
+- ['components/filters/CallbackFilter.md', 'Filters', 'CallbackFilter']
+- ['components/filters/ExcludeLogLevelFilter.md', 'Filters', 'ExcludeLogLevelFilter']
+- ['components/filters/LogLevelRangeFilter.md', 'Filters', 'LogLevelRangeFilter']
+- ['components/filters/MaxLogLevelFilter.md', 'Filters', 'MaxLogLevelFilter']
+- ['components/filters/MinLogLevelFilter.md', 'Filters', 'MinLogLevelFilter']
+- ['components/filters/RegularExpressionFilter.md', 'Filters', 'RegularExpressionFilter']
+- ['components/extenders/CallbackExtender.md', 'Extenders', 'CallbackExtender']
+- ['components/extenders/ContextExtender.md', 'Extenders', 'ContextExtender']
+- ['components/extenders/StacktraceExtender.md', 'Extenders', 'StacktraceExtender']
