--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,17 +14,7 @@ pages:
 - ['components/loggers/StreamLogger.md', 'Loggers', 'StreamLogger']
 - ['components/loggers/SyslogLogger.md', 'Loggers', 'SyslogLogger']
 - ['components/common/ExtendedLogger.md', 'Common', 'ExtendedLogger']
-- ['components/formatters/CallbackFormatter.md', 'Formatters', 'CallbackFormatter']
-- ['components/formatters/ContextJsonFormatter.md', 'Formatters', 'ContextJsonFormatter']
-- ['components/formatters/DateTimeFormatter.md', 'Formatters', 'DateTimeFormatter']
-- ['components/formatters/FormatFormatter.md', 'Formatters', 'FormatFormatter']
-- ['components/formatters/MaxLengthFormatter.md', 'Formatters', 'MaxLengthFormatter']
-- ['components/formatters/MessagePrefixFormatter.md', 'Formatters', 'MessagePrefixFormatter']
-- ['components/formatters/NobrFormatter.md', 'Formatters', 'NobrFormatter']
-- ['components/formatters/PassThroughFormatter.md', 'Formatters', 'PassThroughFormatter']
-- ['components/formatters/ReplaceFormatter.md', 'Formatters', 'ReplaceFormatter']
-- ['components/formatters/TemplateFormatter.md', 'Formatters', 'TemplateFormatter']
-- ['components/formatters/TrimFormatter.md', 'Formatters', 'TrimFormatter']
+- ['components/formatters.md', 'Formatters']
 - ['components/filters/CallbackFilter.md', 'Filters', 'CallbackFilter']
 - ['components/filters/ExcludeLogLevelFilter.md', 'Filters', 'ExcludeLogLevelFilter']
 - ['components/filters/LogLevelRangeFilter.md', 'Filters', 'LogLevelRangeFilter']
