--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,21 +6,8 @@ pages:
 - ['index.md', 'Home']
 - ['user-guide/install.md', 'User Guide']
 - ['user-guide/getting-started.md', 'User Guide']
-- ['components/loggers/ArrayLogger.md', 'Loggers', 'ArrayLogger']
-- ['components/loggers/CallbackLogger.md', 'Loggers', 'CallbackLogger']
-- ['components/loggers/ErrorLogLogger.md', 'Loggers', 'ErrorLogLogger']
-- ['components/loggers/LoggerCollection.md', 'Loggers', 'LoggerCollection']
-- ['components/loggers/ResourceLogger.md', 'Loggers', 'ResourceLogger']
-- ['components/loggers/StreamLogger.md', 'Loggers', 'StreamLogger']
-- ['components/loggers/SyslogLogger.md', 'Loggers', 'SyslogLogger']
-- ['components/common/ExtendedLogger.md', 'Common', 'ExtendedLogger']
-- ['components/formatters.md', 'Formatters']
-- ['components/filters/CallbackFilter.md', 'Filters', 'CallbackFilter']
-- ['components/filters/ExcludeLogLevelFilter.md', 'Filters', 'ExcludeLogLevelFilter']
-- ['components/filters/LogLevelRangeFilter.md', 'Filters', 'LogLevelRangeFilter']
-- ['components/filters/MaxLogLevelFilter.md', 'Filters', 'MaxLogLevelFilter']
-- ['components/filters/MinLogLevelFilter.md', 'Filters', 'MinLogLevelFilter']
-- ['components/filters/RegularExpressionFilter.md', 'Filters', 'RegularExpressionFilter']
-- ['components/extenders/CallbackExtender.md', 'Extenders', 'CallbackExtender']
-- ['components/extenders/ContextExtender.md', 'Extenders', 'ContextExtender']
-- ['components/extenders/StacktraceExtender.md', 'Extenders', 'StacktraceExtender']
+- ['components/common.md']
+- ['components/loggers.md']
+- ['components/formatters.md']
+- ['components/filters.md']
+- ['components/extenders.md']
