--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
 		"email": "ron.kirschler@gmail.com"
 	}],
 	"require": {
-		"php": ">= 5.3",
+		"php": ">= 5.5",
 		"logger/logger": "~0.0.1@stable"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~3.7"
+		"phpunit/phpunit": "~5.0",
+		"phpstan/phpstan": "^0.9.2"
 	},
 	"autoload": {
 		"psr-4": {
@@ -33,5 +34,9 @@
 		"logger/rollbar": "Logger api to rollbar.com",
 		"logger/syslog": "Logger for syslogd",
 		"logger/zendmonitor": "Logger for the zend server monitor api"
+	},
+	"scripts": {
+		"phpstan": "phpstan analyze -l 4 src/",
+		"test": "phpunit -c tests.xml"
 	}
 }
