--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
 before_script:
   - composer self-update
   - composer update
+  - if [ $(phpenv version-name) != "5.6" ]; then composer require --dev phpstan/phpstan; fi
 
 script:
-  - vendor/bin/phpunit -c tests.xml
+  - composer run-script test
+  - if [ $(phpenv version-name) != "5.6" ]; then composer run-script phpstan; fi
