--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
 		"logger/logger": "~0.0.1@stable"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~5.0",
-		"phpstan/phpstan": "^0.9.2"
+		"phpunit/phpunit": "~5.0"
 	},
 	"autoload": {
 		"psr-4": {
