--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 language: php
 
-php:
-  - 7.2
-  - 7.1
-  - 7
-  - 5.6
-  - 5.5
+matrix:
+    include:
+      - php: 7.2
+        env: XPHPENV="NEW"
+      - php: 7.1
+        env: XPHPENV="NEW"
+      - php: 7.0
+        env: XPHPENV="NEW"
+      - php: 5.6
+        env: XPHPENV="OLD"
+      - php: 5.5
+        env: XPHPENV="OLD"
 
 before_script:
   - composer self-update
-  - composer update
-  - if [ $(phpenv version-name) != "5.6" ]; then composer require --dev phpstan/phpstan; fi
+  - if [ $XPHPENV = "NEW" ]; then composer install; fi
+  - if [ $XPHPENV = "OLD" ]; then composer install --no-dev; fi
+  - if [ $XPHPENV = "OLD" ]; then composer require phpunit/phpunit "^3"; fi
 
 script:
   - composer run-script test
-  - if [ $(phpenv version-name) != "5.6" ]; then composer run-script phpstan; fi
+  - if [ $XPHPENV = "NEW" ]; then composer run-script phpstan; fi
