--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_script:
   - composer install
 
 script:
-  - composer run-script test
+  - composer run-script tests
   - composer run-script phpstan
