--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
 
 before_script:
   - composer self-update
-  - composer install
+  - composer update
 
 script:
   - composer run-script tests
