--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"email": "ron.kirschler@gmail.com"
 	}],
 	"require": {
-		"php": ">= 5.5"
+		"php": ">= 5.5",
+		"psr/log": "^1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~5.0",
