--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,19 @@
 	"name": "logger/essentials",
 	"description": "Advanced logging component library",
 	"license": "MIT",
+	"type": "library",
 	"authors": [{
 		"name": "ron",
 		"email": "ron.kirschler@gmail.com"
 	}],
 	"require": {
-		"php": ">= 5.5",
+		"php": ">= 7.0",
+		"ext-json": "*",
+		"ext-iconv": "*",
 		"psr/log": "^1.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~5.0",
+		"phpunit/phpunit": ">= 5.0",
 		"phpstan/phpstan": "^0.9.2"
 	},
 	"autoload": {
@@ -37,5 +40,11 @@
 	"scripts": {
 		"phpstan": "phpstan analyze -l 4 src/",
 		"tests": "phpunit -c tests.xml"
+	},
+	"config": {
+		"discard-changes": true,
+		"platform": {
+			"php": "7.0"
+		}
 	}
 }
