- Min PHP Version is now 7.1. - (Possible breaking change) Removed ExtendedLogger::intercept. Was already deprecated lately. - Fixed various issues reported by phpstan.   - Added various type-hints (possible breaking change).   - Added various phpdoc-type-hints (including some generics, non breaking changes).

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 !/.editorconfig
 !/.gitattributes
 !/.gitignore
-!/.phpstorm.meta.php
 !/.travis.yml
 !/composer.json
 !/LICENSE
 !/mkdocs.yml
+!/phpstan.neon
 !/README.md
 !/tests.xml
