--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
 		"email": "ron.kirschler@gmail.com"
 	}],
 	"require": {
-		"php": ">= 7.0",
+		"php": ">= 7.1",
 		"ext-json": "*",
 		"ext-iconv": "*",
 		"psr/log": "^1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">= 5.0",
-		"phpstan/phpstan": "^0.9.2"
+		"phpstan/phpstan": ">= 0.1"
 	},
 	"autoload": {
 		"psr-4": {
@@ -38,13 +38,13 @@
 		"logger/rollbar": "Logger api to rollbar.com"
 	},
 	"scripts": {
-		"phpstan": "phpstan analyze -l 4 src/",
+		"phpstan": "phpstan analyze -c phpstan.neon",
 		"tests": "phpunit -c tests.xml"
 	},
 	"config": {
 		"discard-changes": true,
 		"platform": {
-			"php": "7.0"
+			"php": "7.1.32"
 		}
 	}
 }
