--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"php": ">= 7.1",
 		"ext-json": "*",
 		"ext-iconv": "*",
-		"psr/log": "^1.0"
+		"psr/log": "^1.0 || ^2.0 || ^3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">= 5.0",
@@ -40,11 +40,5 @@
 	"scripts": {
 		"phpstan": "phpstan analyze -c phpstan.neon",
 		"tests": "phpunit -c tests.xml"
-	},
-	"config": {
-		"discard-changes": true,
-		"platform": {
-			"php": "7.1.32"
-		}
 	}
 }
