--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">= 5.0",
-		"phpstan/phpstan": ">= 0.1"
+		"phpstan/phpstan": ">= 0.1",
+		"rector/rector": "^2.2"
 	},
 	"autoload": {
 		"psr-4": {
